--- a/amharic/index.html
+++ b/amharic/index.html
@@ -14,6 +14,18 @@
       <div class="card">
         <iframe
           style="border-radius: 12px"
+          src="https://open.spotify.com/embed/album/4LL81QP9Q0aYtxFT3hKGZE?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
           src="https://open.spotify.com/embed/artist/2i599Bqu6IpFHTxrMc8QZm?utm_source=generator"
           width="100%"
           height="352"
