--- a/index.html
+++ b/index.html
@@ -18,26 +18,33 @@
         >Firaol Anbessa</span
       >
     </h1>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/5JxRWsAPjQn7n4gxjeriPl?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/4WCtUMygHNFSM9I97XEwto?utm_source=generator&theme=0"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
+    <div class="cardcontainer">
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/5JxRWsAPjQn7n4gxjeriPl?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/4WCtUMygHNFSM9I97XEwto?utm_source=generator&theme=0"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </div>
+    <div class="cardcontainer"></div>
     <iframe
       style="border-radius: 12px"
       src="https://open.spotify.com/embed/playlist/7bJhMe5O6jC2Sc2iYWoxpj?utm_source=generator"
