--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
       <div class="card">
         <iframe
           style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/0JX0rMDTqxIMTxJ1cdfnPB?utm_source=generator&theme=0"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/4ABI6WTxt00TvhdqOn2SGg?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
           src="https://open.spotify.com/embed/playlist/5JxRWsAPjQn7n4gxjeriPl?utm_source=generator"
           width="100%"
           height="352"
@@ -44,76 +68,107 @@
         ></iframe>
       </div>
     </div>
-    <div class="cardcontainer"></div>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/7bJhMe5O6jC2Sc2iYWoxpj?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/56rkQ3shel1JpAluv6CybJ?utm_source=generator&theme=0"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/000xmEIQ6KClXlkXtRGSES?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/3En2zBVJr36HQ7z9ooyNaG?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/5DFVwc3udCo2hzA7BdlZfO?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/3RrXfkeU4Fn5UFwSw861TN?utm_source=generator&theme=0"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-    <iframe
-      style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/3q4RCTQ5sgva520aDXsj51?utm_source=generator"
-      width="100%"
-      height="352"
-      frameborder="0"
-      allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
+    <div class="cardcontainer">
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/7bJhMe5O6jC2Sc2iYWoxpj?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/56rkQ3shel1JpAluv6CybJ?utm_source=generator&theme=0"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </div>
+    <div class="cardcontainer">
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/000xmEIQ6KClXlkXtRGSES?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/3En2zBVJr36HQ7z9ooyNaG?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </div>
+    <div class="cardcontainer">
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/5DFVwc3udCo2hzA7BdlZfO?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/3RrXfkeU4Fn5UFwSw861TN?utm_source=generator&theme=0"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/3q4RCTQ5sgva520aDXsj51?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="card">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/3PsGUouOH37weteYhNlDcO?utm_source=generator"
+          width="100%"
+          height="352"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </div>
   </body>
 </html>
