--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         >Firaol Anbessa</span
       >
     </h1>
+    <div class="headercard">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/6tNQ70jh4OwmPGpYy6R2o9?utm_source=generator&theme=0"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
     <div class="cardcontainer">
       <div class="card">
         <iframe
