--- a/amharic/index.html
+++ b/amharic/index.html
@@ -72,5 +72,17 @@
         ></iframe>
       </div>
     </div>
+    <script
+      data-name="BMC-Widget"
+      data-cfasync="false"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="fira0l"
+      data-description="Support me on Buy me a coffee!"
+      data-message="Thank you for visiting, if u want to support me"
+      data-color="#BD5FFF"
+      data-position="Right"
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
   </body>
 </html>
